--- a/traveltreasure/src/styles/flight/searchBar.css
+++ b/traveltreasure/src/styles/flight/searchBar.css
@@ -1,23 +1,27 @@
 .flightSearchContainer {
   padding: 0 10%;
   margin: 20px auto;
-  width: 1300px;
 }
-.form {
+.FlightSearchform {
   background-color: white;
-  height: 60px;
   display: flex;
+  padding: 10px 0;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 0;
   border-radius: 15px;
   padding-left: 15px;
-  /* padding: 0 7%; */
-  /* border: 2px solid; */
   box-shadow: 1px 1px 3px rgb(37, 37, 37), -1px -1px 3px rgb(39, 38, 38);
 }
-#origin,
-#destination {
+.origin-input-field {
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  width: 120px;
+  padding-left: 5px;
+}
+.destination-input-field {
   height: 40px;
   border: none;
   outline: none;
@@ -35,7 +39,12 @@
   font-size: 1rem;
   padding-left: 5px;
 }
-
+.shiftValues {
+  cursor: pointer;
+}
+.shiftValues i {
+  font-size: 1.2rem;
+}
 #location,
 #noOfPersons,
 #date {
@@ -58,8 +67,6 @@
   margin-right: 7px;
 }
 .searchBtn {
-  width: 100px;
-  height: 25px;
   border: none;
   height: none;
   background-color: transparent;
@@ -67,6 +74,7 @@
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
+  background-color: #f4651e;
 }
 .searchBtn i {
   font-size: 16px;
@@ -76,7 +84,73 @@
   height: inherit;
   display: flex;
   align-items: center;
-  background-color: #f4651e;
-  border-end-end-radius: 15px;
-  border-start-end-radius: 15px;
+}
+.FlightSearchform div {
+  margin: 0 5px;
+}
+#flightClass {
+  margin-right: 7px;
+}
+.shiftValues {
+  margin: 0 7px;
+}
+
+/* Popular Flights */
+
+.popularFlightsContainer {
+  padding: 20px 10%;
+}
+.popularFlightsContainer h1 {
+  margin-bottom: 15px;
+}
+.popularFlights {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.popFlight {
+  width: 280px;
+  height: 300px;
+  cursor: pointer;
+}
+.popFlightImg {
+  width: 100%;
+  height: 80%;
+}
+.popFlightImg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.popFlight h4 {
+  margin-top: 10px;
+  font-size: 1.1rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .flightSearchContainer {
+    padding: 0 5%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .flightSearchContainer {
+    padding: 0 2%;
+  }
+}
+@media screen and (max-width: 992px) {
+}
+@media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 576px) {
+}
+@media screen and (max-width: 480px) {
+  #origin,
+  #destination {
+    width: 80px;
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 380px) {
 }
