--- a/traveltreasure/src/styles/homePage/heroSection.css
+++ b/traveltreasure/src/styles/homePage/heroSection.css
@@ -1,5 +1,5 @@
 .HerosSectionContanier {
-  width: 80%;
+  width: 95%;
   margin: auto;
   display: flex;
   position: relative;
@@ -19,7 +19,7 @@
   height: 100%;
 }
 
-.slide.active {
+.slide.activeSlide {
   display: block;
   opacity: 1;
   animation: slow 0.5s ease-in-out;
@@ -56,7 +56,7 @@
   height: 40px;
   border: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
@@ -67,7 +67,7 @@
 }
 .heroSecImg {
   width: 100%;
-  height: 550px;
+  height: 85vh;
   /* background-repeat: no-repeat;
   background-position: center;
   background-size: cover; */
@@ -118,14 +118,14 @@
   cursor: pointer;
   width: 40px;
   height: 40px;
-  border-radius: 100%;
-  background-color: rgb(222, 215, 215);
+  border-radius: 10px;
+  background-color: rgba(51, 49, 49, 0.349);
   box-shadow: 1px 1px 5px black, -1px -1px 5px black;
 }
 .arrow:hover {
   /* background-color: #f4651e; */
-  background-color: #615efc;
-  color: white;
+  background-color: rgba(240, 235, 235, 0.605);
+  /* color: white; */
   transform: scale(1.1), translateY(-50%);
 }
 .leftArrow {
@@ -143,9 +143,9 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .HerosSectionContanier {
+  /* .HerosSectionContanier {
     width: 85%;
-  }
+  } */
   .slideContent {
     left: 100px;
     width: 700px;
@@ -157,9 +157,9 @@
 }
 
 @media screen and (max-width: 992px) {
-  .HerosSectionContanier {
+  /* .HerosSectionContanier {
     width: 95%;
-  }
+  } */
   .slideContent {
     left: 120px;
     width: 550px;
@@ -167,6 +167,10 @@
   }
   .slideContent h2 {
     font-size: 1rem;
+  }
+  .arrow {
+    width: 35px;
+    height: 35px;
   }
 }
 
@@ -182,6 +186,10 @@
   .heroSecImg {
     width: 100%;
     height: 418px;
+  }
+  .arrow {
+    width: 30px;
+    height: 30px;
   }
 }
 
@@ -200,6 +208,11 @@
     font-size: 0.9rem;
     font-weight: 600;
   }
+  .arrow {
+    width: 28px;
+    height: 28px;
+    border-radius: 7px;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -216,6 +229,11 @@
     height: 25px;
     font-size: 0.7rem;
     font-weight: 600;
+  }
+  .arrow {
+    width: 26px;
+    height: 26px;
+    border-radius: 7px;
   }
 }
 @media screen and (max-width: 360px) {
