--- a/traveltreasure/src/styles/packages/packageSearch.css
+++ b/traveltreasure/src/styles/packages/packageSearch.css
@@ -40,15 +40,15 @@
   margin-top: 20px;
 }
 .form {
-  height: 60px;
+  background-color: white;
+  /* height: 60px; */
+  padding: 10px 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 0;
   border-radius: 15px;
   padding-left: 15px;
-  /* padding: 0 7%; */
-  /* border: 2px solid; */
   box-shadow: 1px 1px 3px rgb(37, 37, 37), -1px -1px 3px rgb(39, 38, 38);
 }
 /* #location,
@@ -56,7 +56,9 @@
 #date {
   
 } */
-
+#noOfPersons {
+  width: 80px;
+}
 #location,
 #noOfPersons,
 #date {
@@ -65,6 +67,9 @@
   height: 40px;
   font-size: 1rem;
   padding-left: 4px;
+}
+#location {
+  width: 130px;
 }
 #location::placeholder {
   font-size: 0.9rem;
@@ -77,14 +82,17 @@
 }
 .searchBtn {
   width: 100px;
-  height: 25px;
+  height: 45px;
   border: none;
-  height: none;
+  outline: none;
   background-color: transparent;
-  color: white;
+  background-color: #f4651e;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
+  border-radius: 10px;
+  margin-right: 10px;
 }
 .searchBtn i {
   font-size: 16px;
@@ -94,7 +102,54 @@
   height: inherit;
   display: flex;
   align-items: center;
-  background-color: #f4651e;
-  border-end-end-radius: 15px;
-  border-start-end-radius: 15px;
+  /* background-color: #f4651e; */
+  /* border-end-end-radius: 15px; */
+  /* border-start-end-radius: 15px; */
+}
+.searchedResults {
+  padding-top: 40px;
+  padding-left: 5%;
+}
+.searchedResults h1 {
+  margin-left: 60px;
+}
+
+.noPackagesFound h1,
+.noPackagesFound p {
+  margin: 10px 0 0 60px;
+}
+
+@media screen and (max-width: 992px) {
+  .searchContainer {
+    padding: 0 5%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .packageBackgroundImg h1 {
+    font-size: 3.5rem;
+  }
+  .searchedResults h1 {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+  }
+  .packageBackgroundImg {
+    height: 270px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .packageBackgroundImg {
+    height: 220px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .packageBackgroundImg h1 {
+    font-size: 2.5rem;
+  }
+  .packageBackgroundImg {
+    height: 200px;
+  }
+  .noPackagesFound h1,
+  .noPackagesFound p {
+    margin: 10px 0 0 30px;
+  }
 }
